# sfml_framework

./: CMakeLists.txt  Makefile  README.md
src/: button.cpp  button.h  intro.cpp  intro.h  main.cpp  mainmenu.cpp  mainmenu.h  mleczny.cpp  mleczny.h  state.cpp  state.h  statemanager.cpp  statemanager.h  textbox.cpp  textbox.h
